--- a/style.css
+++ b/style.css
@@ -66,6 +66,24 @@ header {
     gap: 50px;
     flex: 1 0 auto;
 }
+/*Section 1*/
+.section_1 {
+    display: flex;
+    gap: 550px;
+    width: 1440px;
+}
+.name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+h1 {
+    font-size: 32px;
+    font-weight: 300;
+    letter-spacing: 10px;
+    line-height: 50px;
+    word-spacing: 3px;
+}
 /*Footer*/
 footer {
     width: 1440px;
