--- a/style.css
+++ b/style.css
@@ -84,6 +84,14 @@ h1 {
     line-height: 50px;
     word-spacing: 3px;
 }
+/*section 2*/
+.section_2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 1440px;
+}
 /*Footer*/
 footer {
     width: 1440px;
