--- a/style.css
+++ b/style.css
@@ -159,3 +159,12 @@ footer {
 h2 {
     margin: 20px;
 }
+/*ABOUT*/
+.about_me{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    justify-content: space-between;
+    border-bottom: 1px solid #672f2f;
+}
