--- a/style.css
+++ b/style.css
@@ -168,3 +168,26 @@ h2 {
     justify-content: space-between;
     border-bottom: 1px solid #672f2f;
 }
+/*projects*/
+.projects{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: calc(50% - 20px);
+    border-bottom: 1px solid #672f2f;
+}
+.projects li {
+list-style: none;
+}
+.projects ul {
+    padding: 0;
+    margin: 20px;
+}
+.projects a {
+text-decoration: none;
+cursor: pointer;
+color: #4d2323;
+}
+.projects a:hover {
+    color: #9C3721;
+}
