--- a/style.css
+++ b/style.css
@@ -214,3 +214,11 @@ color: #4d2323;
     width: calc(50% - 20px);
     border-bottom: 1px solid #672f2f;
 }
+/*Expireince*/
+.experience{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+    border-bottom: 1px solid #672f2f;
+}
