--- a/style.css
+++ b/style.css
@@ -222,3 +222,11 @@ color: #4d2323;
     width: 50%;
     border-bottom: 1px solid #672f2f;
 }
+/*Languages*/
+.languages{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: calc(50% - 20px);
+    border-bottom: 1px solid #672f2f;
+}
