--- a/style.css
+++ b/style.css
@@ -230,3 +230,27 @@ color: #4d2323;
     width: calc(50% - 20px);
     border-bottom: 1px solid #672f2f;
 }
+/*contacts*/
+.contacts li a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #4d2323;
+}
+.contacts li a:hover{
+    color: #9C3721;
+}
+.contacts li {
+    list-style: none;
+    margin: 0 0 20px 0;
+}
+.contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+    border-bottom: 1px solid #672f2f;
+}
+.contacts ul {
+    padding: 0;
+    margin: 0 0 0 20px;
+}
