--- a/style.css
+++ b/style.css
@@ -254,3 +254,36 @@ color: #4d2323;
     padding: 0;
     margin: 0 0 0 20px;
 }
+/*media*/
+@media screen and (max-width:1440px) {
+    .contanier{
+      width: 1440px;
+    }
+  }
+  @media screen and  (max-width:1024px){
+    body {
+     width: 1024px;
+    }
+     .contanier {
+     width: 1024px;
+    }
+    .section_1 {
+     width: 1024px;
+     gap: 250px;
+    }
+    .section_2{
+     width: 1024px;
+    }
+    .contacts {
+     width: 50%;
+    }
+    .languages{
+     width: calc(50% - 20px);
+    }
+    footer {
+     width: 1024px;
+    }
+   .skills ul {
+     flex-wrap: wrap;
+   }
+ }
