--- a/style.css
+++ b/style.css
@@ -316,3 +316,60 @@ color: #4d2323;
       }
 
 }
+@media screen and  (max-width:320px) {
+    body {
+        width: 320px;
+       }
+        .contanier {
+        width: 320px;
+        padding: 0 10px 0 10px;
+       }
+       .section_1 {
+        width: 320px;
+        gap: 20px;
+    flex-wrap: wrap;
+    text-align: center;
+       }
+       .section_2{
+        width: 320px;
+       }
+       .contacts {
+        width: 100%;
+       }
+       .languages{
+        width: calc(100% - 20px);
+       }
+       footer {
+        width: 320px;
+       }
+       .footer{
+        flex-direction: column;
+    align-items: center;
+}
+       .skills ul {
+        flex-wrap: wrap;
+      }
+      .experience {
+        width: 100%;
+      }
+      .skills {
+        width: 100%;
+      }
+      .course{
+        width: 100%;
+      }
+      .education {
+        width: 100%;
+      }
+      .about_me {
+        width: 100%;
+      }
+      .projects {
+        width: 100%;
+      }
+    
+      .title {
+        margin: 0 0 0 70px;
+      }
+    }
+
