--- a/style.css
+++ b/style.css
@@ -254,6 +254,43 @@ color: #4d2323;
     padding: 0;
     margin: 0 0 0 20px;
 }
+/*burger menu*/
+.open {
+    display: flex !important;
+    background: #0c0c0e;
+}
+.burger-menu {
+    display: none;
+    position: relative;
+    z-index: 50;
+    align-items: center;
+    justify-content: flex-end;
+    width: 45px;
+    height: 20px;
+}
+.burger-menu.active::before {
+    top: 50%;
+    transform: rotate(45deg) translate(0, -50%);
+}
+.burger-menu::before {
+    top: 0;
+}
+.burger-menu::before, .burger-menu::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background-color: #fff;
+    transition: all 0.3s ease 0s;
+}
+.burger-menu.active::after {
+    top: 50%;
+    transform: rotate(-45deg) translate(0, -50%);
+}
+.burger-menu::after {
+    bottom: 0;
+}
+
 /*media*/
 @media screen and (max-width:1440px) {
     .contanier{
@@ -286,6 +323,24 @@ color: #4d2323;
    .skills ul {
      flex-wrap: wrap;
    }
+   .burger-menu {
+    display: flex;
+}
+nav {
+    display: none;
+    flex-direction: column;
+    background-color: black;
+    position: fixed;
+    width: 332px;
+    height: 510px;
+    top: 60px;
+    bottom: 0;
+    left: 440px;
+    right: 0;
+    z-index: 50;
+    overflow-y: auto;
+    padding: 40px 40px;
+}
  }
  @media screen and  (max-width:768px) {
     body {
