--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     overflow-x:hidden;
 }
 /*HEADER*/
+.open {
+    display: flex !important;
+   
+}
 header {
     flex: 0 0 auto;
 }
@@ -56,6 +60,7 @@ header {
     display: flex;
     justify-content: flex-end;
 }
+
 /*CONTANIER*/
 .contanier {
     display: flex;
@@ -255,40 +260,44 @@ color: #4d2323;
     margin: 0 0 0 20px;
 }
 /*burger menu*/
-.open {
-    display: flex !important;
-    background: #0c0c0e;
-}
-.burger-menu {
+
+.burger {
     display: none;
     position: relative;
     z-index: 50;
     align-items: center;
     justify-content: flex-end;
-    width: 45px;
-    height: 20px;
+    width: 30px;
+    height: 18px;
 }
-.burger-menu.active::before {
-    top: 50%;
-    transform: rotate(45deg) translate(0, -50%);
+.burger span{
+    height: 2px;
+    width: 80%;
+    transform: scale(1);
+    background-color: black;
 }
-.burger-menu::before {
-    top: 0;
-}
-.burger-menu::before, .burger-menu::after {
+.burger::before, .burger::after{
     content: '';
     position: absolute;
     height: 2px;
     width: 100%;
-    background-color: #fff;
+    background-color: black;
     transition: all 0.3s ease 0s;
 }
-.burger-menu.active::after {
+.burger::before { top: 0 }
+
+.burger::after { bottom: 0 }
+
+.burger.active span { transform: scale(0) }
+
+.burger.active::before{
     top: 50%;
     transform: rotate(-45deg) translate(0, -50%);
 }
-.burger-menu::after {
-    bottom: 0;
+
+.burger.active::after{
+    bottom: 50%;
+    transform: rotate(45deg) translate(0, 50%);
 }
 
 /*media*/
@@ -323,24 +332,37 @@ color: #4d2323;
    .skills ul {
      flex-wrap: wrap;
    }
-   .burger-menu {
+   .burger {
     display: flex;
-}
-nav {
+    margin: 20px;
+
+ }
+ .navigation {
     display: none;
+        flex-direction: column;
+        position: fixed;
+        height: 50%;
+        width: 50%;
+        top: 0; 
+        bottom: 0; 
+        left: 0; 
+        right: 0;
+        z-index: 50;
+        overflow-y: auto;
+        padding: 50px 40px;
+        background-color: black;
+        animation: burgerAnimation 0.4s;
+ }
+ .navigation ul {
     flex-direction: column;
-    background-color: black;
-    position: fixed;
-    width: 332px;
-    height: 510px;
-    top: 60px;
-    bottom: 0;
-    left: 440px;
-    right: 0;
-    z-index: 50;
-    overflow-y: auto;
-    padding: 40px 40px;
-}
+    row-gap: 10px;
+
+ }
+ .links li {
+    display: flex;
+    justify-content: center;
+ }
+   
  }
  @media screen and  (max-width:768px) {
     body {
@@ -369,7 +391,7 @@ nav {
        .skills ul {
         flex-wrap: wrap;
       }
-
+    
 }
 @media screen and  (max-width:320px) {
     body {
